--- a/tgi/css/style.css
+++ b/tgi/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0; }
 
 .container {
-  width: 1200px;
+  width: 1100px;
   margin: auto; }
 
 @media screen and (max-width: 1350px) {
@@ -91,11 +91,12 @@ body {
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 
 .title {
+  padding-bottom: 70px;
   background: url("../img/title-bg.png") no-repeat top;
   background-size: cover; }
 
 .title__content {
-  height: 746px;
+  height: 660px;
   margin-top: 35px;
   background: url("../img/title-mockup.png") no-repeat right; }
   .title__content h1 {
@@ -103,7 +104,7 @@ body {
     margin-bottom: 80px;
     padding-top: 130px;
     color: #fff;
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 300;
     font-family: 'Open Sans Light', sans-serif;
     text-transform: uppercase; }
@@ -145,7 +146,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   padding-left: 0;
-  font-size: 17px;
+  font-size: 15px;
   font-family: 'Open Sans Light', sans-serif;
   list-style: none; }
   .main-nav ul li {
@@ -261,7 +262,7 @@ body {
 .button {
   padding: 10px 20px;
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
   font-family: 'Open Sans Light', sans-serif;
   text-decoration: none;
   text-transform: uppercase;
@@ -270,34 +271,34 @@ body {
   .button--partner {
     margin-right: 10px;
     padding-left: 60px;
-    background: url("../img/button-partner.png") no-repeat 15px 10px;
+    background: url("../img/button-partner.png") no-repeat 15px 8px;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
     .button--partner:hover {
-      background: #00c5ff url("../img/button-partner.png") no-repeat 15px 10px; }
+      background: #00c5ff url("../img/button-partner.png") no-repeat 15px 8px; }
     .button--partner-contact {
       position: relative;
       margin-right: 0;
       padding-right: 50px;
       padding-left: 110px;
-      background: url("../img/button-partner.png") no-repeat 60px 10px;
+      background: url("../img/button-partner.png") no-repeat 60px 8px;
       z-index: 2; }
       .button--partner-contact:hover {
-        background: #00c5ff url("../img/button-partner.png") no-repeat 60px 10px; }
+        background: #00c5ff url("../img/button-partner.png") no-repeat 60px 8px; }
   .button--broker {
     padding-left: 70px;
-    background: url("../img/button-broker.png") no-repeat 10px;
+    background: url("../img/button-broker.png") no-repeat 10px 6px;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
     .button--broker:hover {
-      background: #00c5ff url("../img/button-broker.png") no-repeat 10px; }
+      background: #00c5ff url("../img/button-broker.png") no-repeat 10px 6px; }
     .button--broker-contact {
       margin-right: 30px;
       padding-right: 50px;
       padding-left: 110px;
-      background: url("../img/button-broker.png") no-repeat 50px 8px; }
+      background: url("../img/button-broker.png") no-repeat 50px 7px; }
       .button--broker-contact:hover {
-        background: #00c5ff url("../img/button-broker.png") no-repeat 50px 8px; }
+        background: #00c5ff url("../img/button-broker.png") no-repeat 50px 7px; }
 
 @media screen and (max-width: 768px) {
   .button {
@@ -329,7 +330,7 @@ body {
   .edge h1 {
     margin-top: 0;
     color: #294262;
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 300;
     font-family: 'Open Sans Light', sans-serif;
     text-align: center;
@@ -348,13 +349,13 @@ body {
   width: 330px;
   padding-top: 180px; }
   .edge__box b {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 300;
     font-family: 'Open Sans Regular', sans-serif;
     text-transform: uppercase; }
   .edge__box p {
     color: #737373;
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Open Sans Light', sans-serif; }
   .edge__box--1 {
     background: url("../img/edge-1.png") no-repeat top left; }
@@ -437,7 +438,7 @@ body {
     margin-top: 0;
     padding-top: 150px;
     color: #4a4e52;
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 300;
     font-family: 'Open Sans Light', sans-serif;
     text-align: center;
@@ -469,9 +470,9 @@ body {
   width: 910px;
   margin-top: 70px;
   margin-bottom: 80px;
-  padding: 51px;
+  padding: 55px;
   color: #fff;
-  font-size: 48px;
+  font-size: 46px;
   font-weight: 300;
   font-family: 'Open Sans Light', sans-serif;
   text-transform: uppercase;
@@ -494,13 +495,12 @@ body {
     text-align: center; } }
 
 .form {
-  width: 1050px;
-  padding: 70px 100px;
+  padding: 70px;
   background: url("../img/form-bg.png") no-repeat top; }
   .form h1 {
     margin: 0;
     color: #1c4169;
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 500;
     font-family: 'Open Sans Regular', sans-serif;
     text-transform: uppercase; }
@@ -508,7 +508,7 @@ body {
     margin: 0;
     margin-bottom: 30px;
     color: #878788;
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Open Sans Light', sans-serif; }
 
 .form__flex {
@@ -533,7 +533,7 @@ body {
     color: #1c4169;
     margin-bottom: 30px;
     padding: 5px;
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Open Sans Light', sans-serif;
     border: none;
     border-bottom: 1px solid #c6c6c6; }
@@ -550,7 +550,7 @@ body {
     margin-bottom: 0;
     padding: 20px 0;
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     text-transform: uppercase;
     border-radius: 5px;
     background: #08324f;
@@ -564,7 +564,7 @@ textarea {
   width: 50%;
   padding: 20px 30px;
   color: #1c4169;
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Open Sans Light', sans-serif;
   border: 1px solid #d6d6d6;
   border-radius: 5px;
@@ -615,7 +615,7 @@ textarea {
     margin-bottom: 0;
     padding-bottom: 100px;
     color: #737373;
-    font-size: 14px;
+    font-size: 12px;
     font-family: 'Open Sans Light', sans-serif;
     z-index: 2; }
   .footer::before {
