--- a/tgi/sass/blocks/form.scss
+++ b/tgi/sass/blocks/form.scss
@@ -1,12 +1,12 @@
 .form {
-  width: 1050px;
-  padding: 70px 100px;
+  // width: 1050px;
+  padding: 70px;
   background: url('../img/form-bg.png') no-repeat top;
   
   h1 {
     margin: 0;
     color: #1c4169;
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 500;
     font-family: 'Open Sans Regular', sans-serif;
     text-transform: uppercase;
@@ -16,7 +16,7 @@
     margin: 0;
     margin-bottom: 30px;
     color: #878788;
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Open Sans Light', sans-serif;
   }
 }
@@ -36,7 +36,7 @@
     color: #1c4169;
     margin-bottom: 30px;
     padding: 5px;
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Open Sans Light', sans-serif;
     border: none;
     border-bottom: 1px solid #c6c6c6;
@@ -51,7 +51,7 @@
     margin-bottom: 0;
     padding: 20px 0;
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     text-transform: uppercase;
     border-radius: 5px;
     background: #08324f;
@@ -68,7 +68,7 @@ textarea {
   width: 50%;
   padding: 20px 30px;
   color: #1c4169;
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Open Sans Light', sans-serif;
   border: 1px solid #d6d6d6;
   border-radius: 5px;
