--- a/tgi/sass/blocks/title.scss
+++ b/tgi/sass/blocks/title.scss
@@ -1,10 +1,11 @@
 .title {
+  padding-bottom: 70px;
   background: url('../img/title-bg.png') no-repeat top;
   background-size: cover;
 }
 
 .title__content {
-  height: 746px;
+  height: 660px;
   margin-top: 35px;
   background: url('../img/title-mockup.png') no-repeat right;
   
@@ -13,7 +14,7 @@
     margin-bottom: 80px;
     padding-top: 130px;
     color: #fff;
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 300;
     font-family: 'Open Sans Light', sans-serif;
     text-transform: uppercase;
