--- a/mm/sass/blocks/footer.scss
+++ b/mm/sass/blocks/footer.scss
@@ -12,7 +12,8 @@
   ul {
     padding-left: 0;
     font-family: 'SF UI Display Light', sans-serif;
-    list-style-image: url('../img/r-arrow-s.png');
+    // list-style-image: url('../img/r-arrow-s.png');
+    list-style: none;
     list-style-position: inside;
     
     a {
