--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -1,4 +1,5 @@
 .button {
+  color: #fff !important;
   padding: 8px 23px;
   color: #000;
   font-size: 12px;
@@ -7,41 +8,42 @@
   text-decoration: none;
   text-transform: uppercase;
   border: 2px solid $sc;
-  border-radius: 20px;
+  border-radius: 80px;
   background: $sc;
   transition: 0.3s;
-  
+
   &:hover {
-    color: #fff;
+    // color: #fff;
     background: transparent;
   }
-  
+
   &--black {
     color: #fff;
     border: 2px solid #000;
     background: #000;
   }
-  
+
   &--title {
+    color: #fff;
     padding: 12px 60px;
     font-size: 25px;
     font-family: 'SF UI Display Black', sans-serif;
     text-align: center;
     border-radius: 50px;
   }
-  
+
   &--green {
     padding: 8px 60px;
     color: #fff;
     font-size: 20px;
     border: 2px solid $gc;
     background: $gc;
-    
+
     &:hover {
       color: $gc;
     }
   }
-  
+
   &--number {
     padding-left: 30px;
     color: #fff;
@@ -50,13 +52,13 @@
     background: none;
     background: url('../img/tel.png') no-repeat left;
     opacity: 0.6;
-    
+
     &:hover {
       background: url('../img/tel.png') no-repeat left;
       opacity: 1;
     }
   }
-  
+
   &--table {
     display: block;
     width: 100px;
@@ -64,12 +66,12 @@
     margin: auto;
     color: #fff;
     background: transparent;
-    
+
     &:hover {
       background: $sc;
     }
   }
-  
+
   &--download {
     margin-top: 30px;
     padding: 10px 70px;
@@ -77,7 +79,7 @@
     font-family: 'SF UI Display Black', sans-serif;
     border-radius: 50px;
   }
-  
+
   &--submit {
     display: block;
     margin: auto;
@@ -96,17 +98,17 @@
   .button {
     padding: 5px 15px;
     text-align: center;
-  
+
     &--title {
       padding: 8px 30px;
       font-size: 18px;
     }
-    
+
     &--number {
       padding-right: 0;
       padding-left: 25px;
     }
-    
+
     &--submit {
       padding: 5px 30px;
     }
