--- a/mm/sass/blocks/trade.scss
+++ b/mm/sass/blocks/trade.scss
@@ -1,6 +1,6 @@
 .trade {
   padding: 80px 0;
-  
+
   video {
     width: 600px;
   }
@@ -15,7 +15,7 @@
   align-self: center;
   width: 400px;
   text-align: center;
-  
+
   h1 {
     margin-top: 0;
     margin-bottom: 40px;
@@ -23,7 +23,7 @@
     font-family: 'SF UI Display Black', sans-serif;
     text-transform: uppercase;
   }
-  
+
   p {
     margin-bottom: 60px;
     font-size: 20px;
@@ -31,7 +31,7 @@
     font-family: 'SF UI Display', sans-serif;
     opacity: 0.7;
   }
-  
+
   small {
     display: block;
     margin-top: 15px;
@@ -47,13 +47,18 @@
 
 .trade__link {
   align-self: center;
+
+  a {
+    margin-right: 10px;
+    font-size: 0;
+  }
 }
 
-@media screen and ($tablet-widths) {  
+@media screen and ($tablet-widths) {
   .trade__flex {
     flex-wrap: wrap;
   }
-  
+
   .trade__left,
   .trade__right {
     margin: auto;
@@ -64,28 +69,28 @@
   .trade {
     padding: 50px 0;
   }
-  
+
   .trade__left {
     width: auto;
-  
+
     h1 {
       font-size: 30px;
     }
-  
+
     p {
       font-size: 18px;
     }
   }
-  
+
   .trade__right {
     align-items: center;
     padding-top: 30px;
-  
+
     video {
       display: none;
     }
   }
-  
+
   .trade__link {
     text-align: center;
   }
