--- a/mm/sass/blocks/trader.scss
+++ b/mm/sass/blocks/trader.scss
@@ -1,7 +1,7 @@
 .trader__content {
   color: #fff;
   padding-bottom: 50px;
-  
+
   h1 {
     margin-top: 50px;
     font-size: 60px;
@@ -9,7 +9,7 @@
     text-align: center;
     text-transform: uppercase;
   }
-  
+
   .button {
     display: block;
     width: 200px;
@@ -33,22 +33,30 @@
 .trader__left {
   width: 700px;
   font-family: 'SF UI Display Regular', sans-serif;
-  
+
   b {
     font-size: 30px;
-    
+
   }
-  
+
   p {
     font-size: 18px;
     opacity: 0.7;
   }
-  
+
   ul {
     font-size: 18px;
     font-family: 'SF UI Display Regular', sans-serif;
     list-style-image: url('../img/r-arrow-s.png');
     opacity: 0.7;
+  }
+}
+
+.trader__right {
+  font-size: 0;
+
+  a {
+    margin-right: 10px;
   }
 }
 
@@ -64,16 +72,16 @@
 
 .trader__sub-content {
   font-family: 'SF UI Display Regular', sans-serif;
-  
+
   p {
     font-size: 18px;
     opacity: 0.8;
   }
-  
+
   b {
     font-size: 22px;
   }
-  
+
   ul {
     font-size: 18px;
     list-style-image: url('../img/r-arrow-s.png');
@@ -83,7 +91,7 @@
 
 @media screen and ($tablet-widths) {
   .trader__right {
-    
+
     a {
       display: block;
       width: 200px;
@@ -94,30 +102,30 @@
 
 @media screen and ($mobile-widths) {
   .trader__content {
-    
+
     h1 {
       font-size: 30px;
     }
   }
-  
+
   .trader__flex {
     flex-direction: column;
     align-items: center;
   }
-  
+
   .trader__left {
     width: auto;
     order: 10;
-    
+
     b {
       display: block;
       text-align: center;
     }
   }
-  
+
   .trader__right {
     order: 5;
-    
+
     img {
       max-width: 100%;
     }
