--- a/mm/templates/contact.html
+++ b/mm/templates/contact.html
@@ -68,7 +68,7 @@
         <p><b>Support email:</b> support@multiplymarket.com</p>
         <p><b>Support phone:</b> ++442038290032</p>
         <p><b>Monday to Friday</b> between 10:00 to 18:00 GMT</p>
-        <p><b>Our address:</b> Center: Zurich, World Trade Center (Leutschenbachstrasse 95, Zurich, 8050)</p>
+        <p><b>Our address:</b> Center: Zurich, World Trade Center (Leutschenbachstrasse 95, 8050, Zurich, Switzerland)</p>
       </div>
     </div>
   </section>
