--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -202,8 +202,8 @@ body {
     width: 30px;
     height: 2px;
     background-color: #fff;
-    -webkit-box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
-    box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
+    -webkit-box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
+    box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
     -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s; }
   .page-header__main-nav--closed .page-header__toggle:active::before {
@@ -670,7 +670,7 @@ body {
   background-size: 120px; }
 
 .online__slider {
-  display: none; }
+  display: none !important; }
 
 @media screen and (max-width: 1200px) {
   .online h2 {
@@ -681,7 +681,7 @@ body {
   .online__flex {
     display: none; }
   .online__slider {
-    display: block;
+    display: block !important;
     margin-top: 50px; }
     .online__slider .slick-dots {
       bottom: 25px; }
