--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -4,6 +4,7 @@
 @import 'global/fonts';
 
 @import 'blocks/video';
+@import 'blocks/slider';
 @import 'blocks/header';
 @import 'blocks/main-nav';
 @import 'blocks/button';
