--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   width: 250px;
   margin: auto;
-  padding-top: 20px;
+  // padding-top: 20px;
   padding-left: 0;
   list-style: none;
   
