--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -169,7 +169,10 @@ body {
 .slider__box {
   padding-bottom: 150px; }
 
-.slider__box--1 {
+.slider__box--1,
+.slider__box--2,
+.slider__box--3,
+.slider__box--4 {
   background: url("../img/slide1.jpg") no-repeat center;
   background-size: cover; }
 
