--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -90,6 +90,11 @@
     border-radius: 50px;
     cursor: pointer;
   }
+  
+  &--slider {
+    padding: 15px 40px;
+    font-size: 16px;
+  }
 }
 
 @media screen and ($tablet-widths) {}
