--- a/mm/sass/blocks/slider.scss
+++ b/mm/sass/blocks/slider.scss
@@ -1,15 +1,58 @@
 .slider {
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
 }
 
 .slider__box {
-  padding-bottom: 120px;
-}
-
-.slider__box--1,
-.slider__box--2,
-.slider__box--3,
-.slider__box--4 {
-  background: url('../img/slide1.jpg') no-repeat center;
-  background-size: cover;
+  
+  &--1 {
+    padding: 145px 0;
+    background: url('../img/slide1.jpg') no-repeat center;
+    background-size: cover;
+    
+    p {
+      margin-top: 0;
+      margin-bottom: 55px;
+      color: #fff;
+      font-size: 40px;
+      font-style: italic;
+      font-weight: 300;
+      font-family: 'SF UI Text Italic', sans-serif;
+    }
+  }
+  
+  &--2 {
+    padding: 117px 0;
+    background: url('../img/slide2.jpg') no-repeat center;
+    background-size: cover;
+    
+    b {
+      color: #fff;
+      font-size: 40px;
+      font-family: 'SF UI Display Black', sans-serif;
+    }
+    
+    p {
+      margin-top: 30px;
+      margin-bottom: 55px;
+      color: #fff;
+      font-size: 23px;
+      font-weight: 300;
+      font-family: 'SF UI Display Regular', sans-serif;
+    }
+  }
+  
+  &--3 {
+    padding: 147px 0;
+    background: url('../img/slide3.jpg') no-repeat left;
+    background-size: cover;
+    
+    b {
+      display: block;
+      margin-bottom: 51px;
+      color: #fff;
+      font-size: 40px;
+      font-weight: bold;
+      font-family: 'SF UI Display Regular', sans-serif;
+    }
+  }
 }
