--- a/mm/sass/global/fonts.scss
+++ b/mm/sass/global/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Heavy Italic'), local('SFUIText-HeavyItalic'),
-		url('SFUIText-HeavyItalic.woff') format('woff');
+		url('../fonts/SFUIText-HeavyItalic.woff') format('woff');
 	font-weight: 300;
 	font-style: italic;
 }
@@ -9,7 +9,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Light Italic'), local('SFUIText-LightItalic'),
-		url('SFUIText-LightItalic.woff') format('woff');
+		url('../fonts/SFUIText-LightItalic.woff') format('woff');
 	font-weight: 300;
 	font-style: italic;
 }
@@ -17,7 +17,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Medium Italic'), local('SFUIText-MediumItalic'),
-		url('SFUIText-MediumItalic.woff') format('woff');
+		url('../fonts/SFUIText-MediumItalic.woff') format('woff');
 	font-weight: 500;
 	font-style: italic;
 }
@@ -25,7 +25,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Medium'), local('SFUIDisplay-Medium'),
-		url('SFUIDisplay-Medium.woff') format('woff');
+		url('../fonts/SFUIDisplay-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -33,7 +33,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Regular'), local('SFUIDisplay-Regular'),
-		url('SFUIDisplay-Regular.woff') format('woff');
+		url('../fonts/SFUIDisplay-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -41,7 +41,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Light'), local('SFUIDisplay-Light'),
-		url('SFUIDisplay-Light.woff') format('woff');
+		url('../fonts/SFUIDisplay-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -49,7 +49,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Thin'), local('SFUIDisplay-Thin'),
-		url('SFUIDisplay-Thin.woff') format('woff');
+		url('../fonts/SFUIDisplay-Thin.woff') format('woff');
 	font-weight: 100;
 	font-style: normal;
 }
@@ -57,7 +57,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Ultralight'), local('SFUIDisplay-Ultralight'),
-		url('SFUIDisplay-Ultralight.woff') format('woff');
+		url('../fonts/SFUIDisplay-Ultralight.woff') format('woff');
 	font-weight: 100;
 	font-style: normal;
 }
@@ -65,7 +65,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Semibold'), local('SFUIText-Semibold'),
-		url('SFUIText-Semibold.woff') format('woff');
+		url('../fonts/SFUIText-Semibold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
 }
@@ -73,7 +73,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Semibold'), local('SFUIDisplay-Semibold'),
-		url('SFUIDisplay-Semibold.woff') format('woff');
+		url('../fonts/SFUIDisplay-Semibold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
 }
@@ -81,7 +81,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Regular'), local('SFUIText-Regular'),
-		url('SFUIText-Regular.woff') format('woff');
+		url('../fonts/SFUIText-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -89,7 +89,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Black'), local('SFUIDisplay-Black'),
-		url('SFUIDisplay-Black.woff') format('woff');
+		url('../fonts/SFUIDisplay-Black.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -97,7 +97,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Bold Italic'), local('SFUIText-BoldItalic'),
-		url('SFUIText-BoldItalic.woff') format('woff');
+		url('../fonts/SFUIText-BoldItalic.woff') format('woff');
 	font-weight: bold;
 	font-style: italic;
 }
@@ -105,7 +105,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Bold'), local('SFUIText-Bold'),
-		url('SFUIText-Bold.woff') format('woff');
+		url('../fonts/SFUIText-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 }
@@ -113,7 +113,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Heavy'), local('SFUIDisplay-Heavy'),
-		url('SFUIDisplay-Heavy.woff') format('woff');
+		url('../fonts/SFUIDisplay-Heavy.woff') format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
@@ -121,7 +121,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Light'), local('SFUIText-Light'),
-		url('SFUIText-Light.woff') format('woff');
+		url('../fonts/SFUIText-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -129,7 +129,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Heavy'), local('SFUIText-Heavy'),
-		url('SFUIText-Heavy.woff') format('woff');
+		url('../fonts/SFUIText-Heavy.woff') format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
@@ -137,7 +137,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Medium'), local('SFUIText-Medium'),
-		url('SFUIText-Medium.woff') format('woff');
+		url('../fonts/SFUIText-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -145,7 +145,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Bold'), local('SFUIDisplay-Bold'),
-		url('SFUIDisplay-Bold.woff') format('woff');
+		url('../fonts/SFUIDisplay-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 }
@@ -153,7 +153,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Italic'), local('SFUIText-Italic'),
-		url('SFUIText-Italic.woff') format('woff');
+		url('../fonts/SFUIText-Italic.woff') format('woff');
 	font-weight: normal;
 	font-style: italic;
 }
@@ -161,7 +161,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Semibold Italic'), local('SFUIText-SemiboldItalic'),
-		url('SFUIText-SemiboldItalic.woff') format('woff');
+		url('../fonts/SFUIText-SemiboldItalic.woff') format('woff');
 	font-weight: 600;
 	font-style: italic;
 }
