--- a/mm/js/slick/slick-theme.css
+++ b/mm/js/slick/slick-theme.css
@@ -122,7 +122,7 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    bottom: 30px;
 
     display: block;
 
@@ -140,8 +140,8 @@
 
     display: inline-block;
 
-    width: 20px;
-    height: 20px;
+    width: 70px;
+    height: auto;
     margin: 0 5px;
     padding: 0;
 
@@ -154,20 +154,24 @@
 
     display: block;
 
-    width: 20px;
-    height: 20px;
+    width: 70px;
+    height: 6px;
     padding: 5px;
 
     cursor: pointer;
 
     color: transparent;
     border: 0;
+    border-radius: 3px;
     outline: none;
-    background: transparent;
+    background: #1b85c7;
+    
+    transition: 0.3s;
 }
 .slick-dots li button:hover,
 .slick-dots li button:focus
 {
+    background: #009f3c;
     outline: none;
 }
 .slick-dots li button:hover:before,
@@ -175,7 +179,7 @@
 {
     opacity: 1;
 }
-.slick-dots li button:before
+/* .slick-dots li button:before
 {
     font-family: 'slick';
     font-size: 6px;
@@ -196,9 +200,8 @@
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before
+} */
+.slick-dots li.slick-active button
 {
-    opacity: .75;
-    color: black;
+    background: #009f3c;
 }
