--- a/mm/sass/blocks/slider.scss
+++ b/mm/sass/blocks/slider.scss
@@ -51,8 +51,7 @@
       margin-bottom: 51px;
       color: #fff;
       font-size: 40px;
-      font-weight: bold;
-      font-family: 'SF UI Display Regular', sans-serif;
+      font-family: 'SF UI Display Black', sans-serif;
     }
   }
 }
