--- a/tgi/css/style.css
+++ b/tgi/css/style.css
@@ -408,23 +408,109 @@ body {
   background: url("../img/slider-bg.png") no-repeat top;
   background-size: cover; }
 
+.slider__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.slider__container {
+  margin: auto; }
+  .slider__container--1 {
+    width: 1150px; }
+
 .slider__box {
   height: 960px !important; }
+  .slider__box b {
+    color: #fff;
+    font-size: 130px;
+    font-family: 'Open Sans SemiBold', sans-serif;
+    opacity: 0.4; }
+  .slider__box p {
+    margin-top: 20px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Open Sans Light', sans-serif; }
 
-.slider__box--1 {
-  background: url("../img/slider-1.png") no-repeat center; }
+.slider__box--1 h1 {
+  margin-top: 0;
+  padding-top: 120px;
+  color: #fff;
+  font-size: 48px;
+  font-weight: 300;
+  font-family: 'Open Sans Light', sans-serif;
+  text-align: center;
+  text-transform: uppercase; }
+
+.slider__text-1 {
+  -ms-flex-item-align: center;
+  align-self: center;
+  position: relative;
+  width: 360px; }
+  .slider__text-1::before {
+    content: '';
+    position: absolute;
+    left: 30px;
+    bottom: -180px;
+    width: 10px;
+    height: 197px;
+    background: url("../img/text1.png") no-repeat; }
+  .slider__text-1--2::before {
+    content: '';
+    position: absolute;
+    left: 30px;
+    bottom: -250px;
+    width: 10px;
+    height: 677px;
+    background: url("../img/textall.png") no-repeat; }
+  .slider__text-1--3 {
+    width: 370px; }
+    .slider__text-1--3::before {
+      content: '';
+      position: absolute;
+      left: 30px;
+      bottom: -230px;
+      width: 10px;
+      height: 677px;
+      background: url("../img/textall.png") no-repeat; }
+  .slider__text-1--4::before {
+    content: '';
+    position: absolute;
+    left: 30px;
+    bottom: -260px;
+    width: 10px;
+    height: 677px;
+    background: url("../img/textall.png") no-repeat; }
+  .slider__text-1--5::before {
+    content: '';
+    position: absolute;
+    left: 30px;
+    top: -120px;
+    width: 10px;
+    height: 677px;
+    background: url("../img/text5.png") no-repeat; }
 
 .slider__box--2 {
-  background: url("../img/slider-2.png") no-repeat center; }
+  position: relative;
+  top: 120px; }
 
 .slider__box--3 {
-  background: url("../img/slider-3.png") no-repeat center; }
+  position: relative;
+  top: 120px; }
 
 .slider__box--4 {
-  background: url("../img/slider-4.png") no-repeat center; }
+  position: relative;
+  top: 130px; }
 
 .slider__box--5 {
-  background: url("../img/slider-5.png") no-repeat center; }
+  position: relative;
+  top: 180px; }
 
 @media screen and (max-width: 1350px) {
   .slider {
