--- a/mm/js/slick/slick-theme.css
+++ b/mm/js/slick/slick-theme.css
@@ -141,7 +141,7 @@
     display: inline-block;
 
     width: 70px;
-    height: auto;
+    height: 3px;
     margin: 0 5px;
     padding: 0;
 
@@ -155,12 +155,12 @@
     display: block;
 
     width: 70px;
-    height: 6px;
-    padding: 5px;
+    height: 3px;
+    padding: 3px;
 
     cursor: pointer;
 
-    color: transparent;
+    /* color: transparent; */
     border: 0;
     border-radius: 3px;
     outline: none;
@@ -177,7 +177,7 @@
 .slick-dots li button:hover:before,
 .slick-dots li button:focus:before
 {
-    opacity: 1;
+    /* opacity: 1; */
 }
 /* .slick-dots li button:before
 {
