--- a/tgi/sass/blocks/contact.scss
+++ b/tgi/sass/blocks/contact.scss
@@ -6,10 +6,10 @@
 }
 
 .contact__title {
-  width: 910px;
+  width: 900px;
   margin-top: 70px;
   margin-bottom: 80px;
-  padding: 55px;
+  padding: 65px;
   color: #fff;
   font-size: 46px;
   font-weight: 300;
@@ -19,6 +19,7 @@
   background-size: cover;
   
   span {
+    font-weight: 500;
     font-family: 'Open Sans SemiBold', sans-serif;
   }
 }
