--- a/tgi/sass/blocks/main-nav.scss
+++ b/tgi/sass/blocks/main-nav.scss
@@ -2,6 +2,7 @@
   
   ul {
     display: flex;
+    align-items: center;
     padding-left: 0;
     font-size: 15px;
     font-family: 'Open Sans Light', sans-serif;
@@ -20,6 +21,14 @@
       &:hover {
         color: #00c5ff;
       }
+    }
+    
+    select {
+      height: 30px;
+      color: #fff;
+      font-size: 15px;
+      border: 1px solid #00c5ff;
+      background: transparent;
     }
   }
 }
