--- a/tgi/sass/blocks/main-nav.scss
+++ b/tgi/sass/blocks/main-nav.scss
@@ -29,6 +29,10 @@
       font-size: 15px;
       border: 1px solid #00c5ff;
       background: transparent;
+      
+      option {
+        background: transparent;
+      }
     }
   }
 }
