--- a/tgi/css/style.css
+++ b/tgi/css/style.css
@@ -168,6 +168,8 @@ body {
     font-size: 15px;
     border: 1px solid #00c5ff;
     background: transparent; }
+    .main-nav ul select option {
+      background: transparent; }
 
 .main-nav__toggle {
   display: none; }
