--- a/tgi/sass/blocks/main-nav.scss
+++ b/tgi/sass/blocks/main-nav.scss
@@ -28,11 +28,7 @@
       color: #fff;
       font-size: 15px;
       border: 1px solid #00c5ff;
-      background: transparent;
-      
-      option {
-        background: transparent;
-      }
+      background: #1a2b3f;
     }
   }
 }
