--- a/tgi/css/style.css
+++ b/tgi/css/style.css
@@ -167,9 +167,7 @@ body {
     color: #fff;
     font-size: 15px;
     border: 1px solid #00c5ff;
-    background: transparent; }
-    .main-nav ul select option {
-      background: transparent; }
+    background: #1a2b3f; }
 
 .main-nav__toggle {
   display: none; }
