--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -332,13 +332,13 @@ body {
         font-family: 'Proxima Nova Rg', sans-serif; }
 
 .title {
+  padding: 280px 0;
   text-align: center;
-  background: #488dae url("../img/title-bg.jpg") no-repeat;
+  background: #488dae url("../img/title-bg.jpg") no-repeat top;
   background-size: cover; }
   .title h1 {
     margin-top: 0px;
     margin-bottom: 0;
-    padding-top: 280px;
     font-size: 60px;
     font-family: 'Proxima Nova Rg', sans-serif;
     text-transform: uppercase; }
@@ -346,12 +346,146 @@ body {
     font-size: 36px;
     font-family: 'Proxima Nova Rg', sans-serif; }
 
+.title__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: 30px; }
+  .title__links a {
+    margin: 0 15px; }
+
 .btn {
   padding: 20px 90px;
   color: #000;
   font-size: 24px;
   font-weight: bold;
   font-family: 'Proxima Nova Rg', sans-serif;
-  text-decoration: none; }
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
   .btn--click {
     background: #ff5400; }
+    .btn--click:hover {
+      color: #fff; }
+  .btn--unclick {
+    padding: 14px 84px;
+    border: 6px solid #ff5400; }
+    .btn--unclick:hover {
+      color: #fff;
+      background: #ff5400; }
+
+.products {
+  padding-top: 100px; }
+  .products h1 {
+    margin-top: 0;
+    margin-bottom: 70px;
+    font-size: 48px;
+    font-family: 'Proxima Nova Rg', sans-serif;
+    text-align: center;
+    text-transform: uppercase; }
+  .products hr {
+    width: 370px;
+    height: 2px;
+    margin: 0 auto;
+    border: none;
+    background: #68788a; }
+
+.products__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 100px; }
+
+.products__box {
+  width: 130px;
+  padding-top: 120px;
+  font-size: 24px;
+  font-family: 'Proxima Nova Lt', sans-serif;
+  text-align: center; }
+  .products__box p {
+    margin: 0; }
+  .products__box--bank {
+    background: url("../img/bank.svg") no-repeat top;
+    background-size: 100px; }
+  .products__box--algo {
+    background: url("../img/algo.svg") no-repeat top;
+    background-size: 100px; }
+  .products__box--crm {
+    background: url("../img/crm.svg") no-repeat top;
+    background-size: 100px; }
+  .products__box--card {
+    background: url("../img/card.svg") no-repeat top;
+    background-size: 100px; }
+  .products__box--risk {
+    background: url("../img/risk.svg") no-repeat top;
+    background-size: 100px; }
+  .products__box--social {
+    background: url("../img/social.svg") no-repeat top;
+    background-size: 100px; }
+
+.manual h1 {
+  margin: 70px 0;
+  font-size: 48px;
+  font-family: 'Proxima Nova Rg', sans-serif;
+  text-align: center;
+  text-transform: uppercase; }
+
+.manual__tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+  height: 300px; }
+  .manual__tabs button {
+    display: block;
+    width: 100%;
+    padding: 22px 16px;
+    color: #000;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: 'Proxima Nova Rg', sans-serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .manual__tabs button:hover {
+      background-color: #ddd; }
+    .manual__tabs button:active {
+      background-color: #ccc; }
+
+.manual__button {
+  width: 40%; }
+
+.manual__links--trade {
+  background: #68788a; }
+
+.manual__links--manage {
+  background: #f58b23; }
+
+.manual__links--integrate {
+  background: #0bbcfd; }
+
+.manual__links--grow {
+  background: #d4c2a5; }
+
+/* Style the tab content */
+.manual__content {
+  display: none;
+  padding: 60px 130px;
+  width: 60%;
+  border-left: none;
+  height: 400px; }
+  .manual__content--trade {
+    display: block;
+    background: #e6e6e6; }
