--- a/bb/sass/blocks/title.scss
+++ b/bb/sass/blocks/title.scss
@@ -1,12 +1,13 @@
 .title {
+  padding: 280px 0;
   text-align: center;
-  background: #488dae url('../img/title-bg.jpg') no-repeat;
+  background: #488dae url('../img/title-bg.jpg') no-repeat top;
   background-size: cover;
   
   h1 {
     margin-top: 0px;
     margin-bottom: 0;
-    padding-top: 280px;
+    // padding-top: 280px;
     font-size: 60px;
     font-family: 'Proxima Nova Rg', sans-serif;
     text-transform: uppercase;
@@ -15,5 +16,15 @@
   b {
     font-size: 36px;
     font-family: 'Proxima Nova Rg', sans-serif;
+  }
+}
+
+.title__links {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  
+  a {
+    margin: 0 15px;
   }
 }
