--- a/bb/sass/blocks/manual.scss
+++ b/bb/sass/blocks/manual.scss
@@ -16,28 +16,29 @@
   // border: 1px solid #ccc;
   // background-color: #f1f1f1;
   width: 100%;
-  height: 300px;
+  // height: 600px;
   
   button {
     display: block;
     width: 100%;
-    padding: 22px 16px;
+    padding: 50px;
+    padding-right: 80px;
     color: #000;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     font-family: 'Proxima Nova Rg', sans-serif;
-    text-align: center;
+    text-align: right;
     border: none;
     outline: none;
     cursor: pointer;
     transition: 0.3s;
     
     &:hover {
-      background-color: #ddd;
+      // background-color: #ddd;
     }
     
     &:active {
-      background-color: #ccc;
+      // background-color: #ccc;
     }
   }
 }
@@ -47,19 +48,75 @@
 }
 
 .manual__links--trade {
+  position: relative;
   background: #68788a;
+  
+  &:focus {
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -30px;
+      width: 34px;
+      height: 124px;
+      background: url('../img/btn-arrow-trade.png') no-repeat top;
+      background-size: contain;
+    }
+  }
 }
 
 .manual__links--manage {
+  position: relative;
   background: #f58b23;
+  
+  &:focus {
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -29px;
+      width: 34px;
+      height: 124px;
+      background: url('../img/btn-arrow-manage.png') no-repeat top;
+      background-size: contain;
+    }
+  }
 }
 
 .manual__links--integrate {
+  position: relative;
   background: #0bbcfd;
+  
+  &:focus {
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -28px;
+      width: 34px;
+      height: 124px;
+      background: url('../img/btn-arrow-integrate.png') no-repeat top;
+      background-size: contain;
+    }
+  }
 }
 
 .manual__links--grow {
+  position: relative;
   background: #d4c2a5;
+  
+  &:focus {
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -28px;
+      width: 34px;
+      height: 124px;
+      background: url('../img/btn-arrow-grow.png') no-repeat top;
+      background-size: contain;
+    }
+  }
 }
 
 /* Style the tab content */
@@ -69,8 +126,18 @@
   padding: 60px 130px;
   // border: 1px solid #ccc;
   width: 60%;
+  font-size: 16px;
+  font-family: 'Proxima Nova Lt', sans-serif;
   border-left: none;
-  height: 400px;
+  // height: 400px;
+  
+  b {
+    text-transform: uppercase;
+  }
+  
+  p {
+    margin-top: 0;
+  }
   
   &--trade {
     display: block;
