--- a/bb/sass/blocks/manual.scss
+++ b/bb/sass/blocks/manual.scss
@@ -130,6 +130,8 @@
   font-family: 'Proxima Nova Lt', sans-serif;
   border-left: none;
   // height: 400px;
+  // opacity: 0;
+  transition: 0.6s;
   
   b {
     text-transform: uppercase;
