--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -522,7 +522,9 @@ body {
   width: 60%;
   font-size: 16px;
   font-family: 'Proxima Nova Lt', sans-serif;
-  border-left: none; }
+  border-left: none;
+  -webkit-transition: 0.6s;
+  transition: 0.6s; }
   .manual__content b {
     text-transform: uppercase; }
   .manual__content p {
